# telexide

./: Cargo.toml  README.md
examples/ping_bot/: Cargo.toml
examples/ping_bot/src/: main.rs
examples/repeat_image/: Cargo.toml
examples/repeat_image/src/: main.rs
examples/upload_image/: Cargo.toml
examples/upload_image/src/: main.rs
examples/webhook_bot/: Cargo.toml
examples/webhook_bot/src/: main.rs
src/: lib.rs
src/api/: api.rs  api_client.rs
src/api/types/: commands.rs  edit_messages.rs  inline.rs  other.rs  send_messages.rs  updates.rs
src/client/: builder.rs  client.rs  context.rs  stream.rs  webhook_handling.rs
src/framework/: framework.rs
src/model/: chat.rs  inline.rs  markup.rs  message.rs  message_entity.rs  other.rs  raw.rs  update.rs
src/model/utils/: text.rs  unix_date_formatting.rs
src/utils/: form_data.rs  macros.rs  result.rs
telexide_fork_proc_macros/: Cargo.toml
telexide_fork_proc_macros/src/: lib.rs  structs.rs  utils.rs
telexide_proc_macros/src/: lib.rs
tests/: client.rs  macros.rs  types.rs  webhook.rs
