[package]
name = "telexide-fork"
version = "0.2.1"
description = "(working) Fork of Telexide: An async Rust library for the telegram bot API"
repository = "https://github.com/galeone/telexide"
homepage = "https://github.com/galeone/telexide"
keywords = ["telegram", "api", "bot"]
license-file = "LICENSE.md"
readme = "README.md"
authors = [
    "Callidus <callidusumbra@gmail.com>", # original author, main contributor
    "Paolo Galeone <nessuno@nerdz.eu>" # This fork
]
edition = "2018"

[dependencies.telexide_fork_proc_macros]
path = "./telexide_fork_proc_macros"
version = "0.1.1"

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.72"
chrono = "0.4.19"
hyper = { version = "0.14.15", features = ["http2", "client", "server"] }
hyper-tls = "0.5.0"
tokio = { version = "1.14.0", features = [
    "rt",
    "net",
    "time",
    "macros",
    "sync",
    "signal",
    "rt-multi-thread",
] }
http = "0.2.5"
async-trait = "0.1.51"
futures = "0.3.18"
typemap = "0.3.3"
parking_lot = "0.11.2"
paste = "1.0.6"
log = "0.4.14"
tonic = { version = "0.6.1", features = ["tls-roots"] }
