[package]
name = "telexide-fork"
version = "0.2.4"
description = "(working) Fork of Telexide: An async Rust library for the telegram bot API"
repository = "https://github.com/galeone/telexide"
homepage = "https://github.com/galeone/telexide"
keywords = ["telegram", "api", "bot"]
license-file = "LICENSE.md"
readme = "README.md"
authors = [
    "Callidus <callidusumbra@gmail.com>", # original author, main contributor
    "Paolo Galeone <nessuno@nerdz.eu>" # This fork
]
edition = "2018"

[dependencies.telexide_fork_proc_macros]
path = "./telexide_fork_proc_macros"
version = "0.1.1"

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
chrono = "0.4.26"
hyper = { version = "0.14.27", features = ["http2", "client", "server"] }
hyper-tls = "0.5.0"
tokio = { version = "1.32.0", features = [
    "rt",
    "net",
    "time",
    "macros",
    "sync",
    "signal",
    "rt-multi-thread",
] }
http = "0.2.9"
async-trait = "0.1.73"
futures = "0.3.28"
typemap = "0.3.3"
parking_lot = "0.12.1"
paste = "1.0.14"
log = "0.4.20"
tonic = { version = "0.9.2", features = ["tls-roots"] }
